# api/monitoring-openapi.yaml
@@ -495,10 +495,6 @@ components:
           type: string
         systemName:
           type: string
-        ownerName:
-          type: string
-        supervisorName:
-          type: string
         preRequisiteProd:
           type: string
         theBatchProd:
@@ -509,8 +505,9 @@ components:
           type: integer
         defaultCostMinutes:
           type: integer
-        frequency:
+        batchProcessing:
           type: string
+          description: 跑批周期，D:每日 M:月末 NM:非月末
         taskIsFlag:
           type: string
         remark:
@@ -539,7 +536,7 @@ components:
         avgCostMinutes:
           type: string
           description: 历史平均耗时，格式 mm:ss；平日按往前 30 个非月底业务日统计，月底按往前 6 个自然月底业务日统计
-        predictEndTime:
+        latestEndTime:
           type: string
           format: date-time
           nullable: true
@@ -630,10 +627,6 @@ components:
           type: string
         systemCode:
           type: string
-        ownerName:
-          type: string
-        supervisorName:
-          type: string
         preRequisiteProd:
           type: string
         theBatchProd:
@@ -689,10 +682,6 @@ components:
         taskName:
           type: string
         systemCode:
-          type: string
-        ownerName:
-          type: string
-        supervisorName:
           type: string
         preRequisiteProd:
           type: string
